fix REPL header being hidden by banner (#857)

--- a/src/components/controllers/repl/style.module.less
+++ b/src/components/controllers/repl/style.module.less
@@ -3,7 +3,7 @@
 .repl {
 	position: absolute;
 	left: 0;
-	top: 56px;
+	top: @header-and-banner-height;
 	bottom: 0;
 	height: auto;
 	width: 100%;
